# clipper

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  AppContent.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/core/: tray.rs  window_handler.rs
src/components/: AiTip.tsx  ExitConfirmationModal.tsx  GitHubConnectPage.tsx  MarkdownRenderer.tsx  ToastProvider.tsx  TocTree.tsx
src/utils/: fileDownloader.ts
